--- a/manifest.json
+++ b/manifest.json
@@ -1,27 +1,27 @@
 {
 	"manifest_version": 2,
-	"name": "Which Egg",
+	"name": "Which Egg Is Which",
 	"description": "Replace the hidden egg with the original one.",
-	"version": "1.1",
+	"version": "1.12",
 	
-	"icons": {
+	"icons":
+	{
 		"16": "icons/icon16.png",
 		"48": "icons/icon48.png",
 		"128": "icons/icon128.png"
 	},
 	
+	"browser_action": {
+		"default_title": "Info",
+		"default_popup": "home.html"
+	},
+	
 	"content_scripts": [
 		{
 			"matches": [ "https://dragcave.net/locations/*" ],
-			"js": [ 
-				"location.js",
-				"content.js"
-			]
+			"js": [ "location.js", "content.js" ]
 		}
 	],
 	
-	"web_accessible_resources": [
-		"images/*.png",
-		"images/*.gif"
-	]
+	"web_accessible_resources": [ "images/*.png", "images/*.gif" ]
 }
