--- a/manifest.json
+++ b/manifest.json
@@ -10,6 +10,8 @@
 		"48": "icons/icon48.png",
 		"128": "icons/icon128.png"
 	},
+
+	"permissions" : ["tabs"],	
 	
 	"browser_action": {
 		"default_title": "Info",
