--- a/manifest.json
+++ b/manifest.json
@@ -1,48 +1,48 @@
 {
-	"manifest_version": 2,
-	"name": "Which Egg Is Which",
-	"description": "Replace the hidden egg with the original one.",
-	"version": "1.12",
+    "manifest_version": 2,
+    "name": "Which Egg Is Which",
+    "description": "Replace the hidden egg with the original one.",
+    "version": "1.12",
 
-	"icons":
-	{
-		"16": "icons/icon16.png",
-		"48": "icons/icon48.png",
-		"128": "icons/icon128.png"
-	},
+    "icons":
+    {
+        "16": "icons/icon16.png",
+        "48": "icons/icon48.png",
+        "128": "icons/icon128.png"
+    },
 
-	"permissions" : [ "tabs", "storage" ],
+    "permissions" : [ "tabs", "storage" ],
 
-	"browser_action":
-	{
-		"browser_style": true,
-		"default_title": "Info",
-		"default_popup": "view/event.html"
-	},
+    "browser_action":
+    {
+        "browser_style": true,
+        "default_title": "Info",
+        "default_popup": "view/event.html"
+    },
 
-	"background":
-	{  
-		"scripts": [
-			"js/background_biome.js",
-			"js/background_handle.js"
-		],
-		"persistent": false
-	},
+    "background":
+    {  
+        "scripts": [
+            "js/background_biome.js",
+            "js/background_handle.js"
+        ],
+        "persistent": false
+    },
 
-	"content_scripts": [
-		{
-			"matches": [ "https://dragcave.net/locations/*" ],
-			"js": [ "js/content_locations.js" ]
-		},
-		{
-			"matches": [ "https://dragcave.net/abandoned" ],
-			"js": [ "js/jquery.min.js", "js/abandoned.js" ]
-		},
-		{
-			"matches": [ "https://dragcave.net/trickortreat*", "https://dragcave.net/easter*" ],
-			"js": [ "js/autocollect.js" ]
-		}
-	],
+    "content_scripts": [
+        {
+            "matches": [ "https://dragcave.net/locations/*" ],
+            "js": [ "js/content_locations.js" ]
+        },
+        {
+            "matches": [ "https://dragcave.net/abandoned" ],
+            "js": [ "js/jquery.min.js", "js/content_abandoned.js" ]
+        },
+        {
+            "matches": [ "https://dragcave.net/trickortreat*", "https://dragcave.net/easter*" ],
+            "js": [ "js/content_collection.js" ]
+        }
+    ],
 
-	"web_accessible_resources": [ "images/*.png", "images/*.gif" ]
+    "web_accessible_resources": [ "images/*.png", "images/*.gif" ]
 }
