refactor: Refactor content_collection.js

--- a/manifest.json
+++ b/manifest.json
@@ -40,6 +40,7 @@
         },
         {
             "matches": [ "https://dragcave.net/trickortreat*", "https://dragcave.net/easter*" ],
+            "run_at": "document_idle",
             "js": [ "js/content_collection.js" ]
         }
     ],
